--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -3,3 +3,9 @@ services:
     build: .
     ports:
       - 4200:80
+    restart: always
+    networks:
+      - datingapp
+
+networks:
+  datingapp:
